Fix the weird gap

--- a/frontend/src/pages/UserGames.css
+++ b/frontend/src/pages/UserGames.css
@@ -1,5 +1,5 @@
 .page-title{
-    margin-top: 4em;
+    margin-top: 2em;
     font-size: 3rem;
     font-weight: 700;
     color: #72139B;
